more css updates lol, this time fixed mobile optimisation in multiple places for those who want to browse bonk leagues on their phones? yeah. anyway, its much bettr now

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <meta name="theme-color" content="#013e79">
 
         <link rel="icon" type="image/png" href="static/logo.png">
-        <link rel='stylesheet' type='text/css' href='static/style.css#3'>
+        <link rel='stylesheet' type='text/css' href='static/style.css#4'>
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112446948-1"></script>
@@ -46,9 +46,9 @@
             </nav>
         </header>
         <section>
-            <a href="client.html"><img src="static/thumb1.png" class="homethumb" width="350"></a>
-            <a href="skins.html"><img src="static/thumb2.png" class="homethumb" width="350"></a>
-            <a href="more.html"><img src="static/thumb3.png" class="homethumb" width="350"></a>
+            <a href="client.html"><img src="static/thumb1.png" class="homethumb"></a>
+            <a href="skins.html"><img src="static/thumb2.png" class="homethumb"></a>
+            <a href="more.html"><img src="static/thumb3.png" class="homethumb"></a>
             <br/><br/><hr/><br/>
             <span class="parthead">Welcome to Bonk Leagues!</span><br/><br/>
             <b>Bonk Leauges is a useful website for the popular game <a href="http://bonk.io" target="_blank">bonk.io</a> where you can:</b><br/><br/>- Use our custom <a href="client.html">Bonk Leagues Client</a> with many new useful features for Bonk,
