Update - Fixed some bugs and stuff, also added a new sample skin.

--- a/skins.html
+++ b/skins.html
@@ -32,7 +32,7 @@
         <header>
             <a href="index.html" id="defaulta">
                 <img src="static/logo.png" id="logo" draggable="false">
-                <h1>Skin Manager<span id="typing">_</span><span style="font-size:18px;vertical-align:top">v3.0</span></h1>
+                <h1>Skin Manager<span id="typing">_</span><span style="font-size:18px;vertical-align:top">v3.1</span></h1>
             </a>
             <br/>
             <nav>
@@ -49,8 +49,8 @@
             <div id="loggedin">
                 <h1>WELCOME, <span class="s-name">X</span>!</h1><br/><br/>
                 <span class="parthead">My Skins</span><br/><br/>
-                <p id="txt-skin1" style="display:none">You have no saved skins yet. You can use the plus button to add one!<br/><br/>We recommend adding your current skin first.</p>
-                <div class="skincont" style="display:inline-block"></div><div class="skinslot" data-skin="addskin"><span style="margin-left:20px;">+</span></div>
+                <p id="txt-skin1" style="display:none">You have no saved skins yet. You can use the plus button to add one!<br/><br/>We recommend adding your current skin first.<br/><br/></p>
+                <div class="skincont" style="display:inline-block"></div><div class="skinslot" data-skin="addskin" style="margin-right:0px;"><span style="margin-left:20px;">+</span></div>
                 <br/>
                 <a class="button" style="font-size:24px;padding:5px 10px;animation:none;" onclick="window.location = 'skins.html';">Logout</a>
                 <br/><br/>
@@ -206,6 +206,6 @@
         <script src="static/bab.js"></script>
         <script src="static/md5.js"></script>
         <script src="static/skineditor.js#v1"></script>
-        <script src="static/skinscript.js#v8"></script>
+        <script src="static/skinscript.js#v9"></script>
     </body>
 </html>
