Completely redone folder structure, also we now use Jekyll for dynamically including certain parts. There's a possibility that this breaks everything, so fingers crossed it doesn't and I don't need to do any extra annoying work.

--- a/client.html
+++ b/client.html
@@ -1,97 +1,30 @@
-<!DOCTYPE html>
-<html lang='en'>
-    <head>
-        <title>Bonk Leagues Client</title>
-
-        <meta charset='utf-8'>
-        <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-        <meta property="og:title" content="Bonk Leagues Client" />
-        <meta property="og:locale" content="en" />
-        <meta name="description" content="The Bonk Leagues Client is a modified client for the game http://bonk.io/" />
-        <meta property="og:description" content="The Bonk Leagues Client is a modified client for the game http://bonk.io/" />
-        <link rel="canonical" href="https://bonkleagues.github.io/client.html" />
-        <meta property="og:url" content="https://bonkleagues.github.io/client.html" />
-        <meta property="og:site_name" content="Bonk Leagues Client" />
-        <meta property="og:image" content="https://bonkleagues.github.io/static/logo.png" />
-        <meta name="theme-color" content="#013e79">
-
-        <link rel="icon" type="image/png" href="static/logo.png">
-        <link rel='stylesheet' type='text/css' href='static/style.css#1'>
-
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112446948-1"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-
-            gtag('config', 'UA-112446948-1');
-        </script>
-    </head>
-    <body>
-        <header>
-            <a href="index.html" id="defaulta">
-                <img src="static/logo.png" id="logo" draggable="false">
-                <h1>Bonk Leagues Client<span id="typing">_</span></h1>
-            </a>
-            <br/>
-            <nav>
-                <a href="index.html">Home</a>
-                <a class="sel" href="client.html">Client</a>
-                <a href="skins.html">Skin Manager</a>
-                <span id="more">More &#9660;<div class="moredd"><a href="quickplay.html">Quick Play Map Checker</a></div></span>
-                <!--
-                <a href="https://discord.gg/A5zpj2a" target="_blank">Discord</a>
-                -->
-            </nav>
-        </header>
-        <section>
-            <div id="instructions">
-                <span class="parthead" id="insthead">Instructions</span></br><br/>
-                <p style="font-weight:bold;" id="steptxt1">Before you are able to download and play Bonk Leagues, there are some instructions you have to follow.</p>
-                <p id="steptxt2">Don't worry! It won't take long. There are only <b>4</b> simple steps to take.</p>
-                <br/>
-            </div>
-            <!--<a id="buttonspec" class="button">⇒ Play Now ⇐</a>-->
-            <b>
-            The Bonk Leagues Client will be released very Soon<sup>TM</sup><br/>
-            <span style="font-weight:400">To stay updated on the Client's development, you can join the <a href="https://discord.gg/5SB5fYm" target="_blank">M4K Bonk.io Discord Server</a>.<br/><br/>
-            Meanwhile, you can use our useful <a href="skins.html">Skin Manager</a>.</span>
-            </b>
-            <br/><br/>
-            <br/><br/><br/>
-            <div id="info">
-                <span class="parthead">What is it?</span></br><br/>
-                <p style="font-weight:bold;">The Bonk Leagues Client is a modified client for the game <a href="http://bonk.io" target="_blank">bonk.io</a>.</p>
-                <p>Bonk Leagues Client is community-run and offers many unique features that bonk.io itself does not</a>.</p>
-                <br/>
-                <span class="parthead">Features</span></br>
-                <ul>
-                    <li style="margin-left:20px;"><i>Bonk Leagues Client will include many useful and helpful features, such as custom servers, enhanced gameplay, and more community features.</i></li>
-                </ul>
-            </div>
-
-            <br/><hr/><br/>
-
-            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                <!-- Bonk (Money Grab) Leagues -->
-                <ins class="adsbygoogle"
-                style="display:block"
-                data-ad-client="ca-pub-8362785424135480"
-                data-ad-slot="5034197850"
-                data-ad-format="auto"></ins>
-            <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
-            <div id="adbnote">It looks like you have an ad-blocker on.<br/><br/><b>To help support the development of Bonk Leagues and the Skin Manager, we'd like it if you would disable it &lt;3.</b></div>
-
-
-            <span style="position:fixed;bottom:15px;right:15px;font-size:16px;z-index:998;">website by Finbae<span style="font-size:11px;color:#666;">#2180</span></span>            
-        </section>
-
-
-        <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-        <script src="static/bab.js"></script>
-        <script src="static/script.js#1"></script>
-    </body>
-</html>
+---
+title: 'Bonk Leagues Client'
+desc: 'The Bonk Leagues Client is a modified client for the game http://bonk.io/'
+canonical: 'https://bonkleagues.github.io/client.html'
+sel: 'client'
+---
+<div id="instructions">
+    <span class="parthead" id="insthead">Instructions</span></br><br/>
+    <p style="font-weight:bold;" id="steptxt1">Before you are able to download and play Bonk Leagues, there are some instructions you have to follow.</p>
+    <p id="steptxt2">Don't worry! It won't take long. There are only <b>4</b> simple steps to take.</p>
+    <br/>
+</div>
+<!--<a id="buttonspec" class="button">⇒ Play Now ⇐</a>-->
+<b>
+The Bonk Leagues Client will be released very Soon<sup>TM</sup><br/>
+<span style="font-weight:400">To stay updated on the Client's development, you can join the <a href="https://discord.gg/5SB5fYm" target="_blank">M4K Bonk.io Discord Server</a>.<br/><br/>
+Meanwhile, you can use our useful <a href="skins.html">Skin Manager</a>.</span>
+</b>
+<br/><br/>
+<br/><br/><br/>
+<div id="info">
+    <span class="parthead">What is it?</span></br><br/>
+    <p style="font-weight:bold;">The Bonk Leagues Client is a modified client for the game <a href="http://bonk.io" target="_blank">bonk.io</a>.</p>
+    <p>Bonk Leagues Client is community-run and offers many unique features that bonk.io itself does not</a>.</p>
+    <br/>
+    <span class="parthead">Features</span></br>
+    <ul>
+        <li style="margin-left:20px;"><i>Bonk Leagues Client will include many useful and helpful features, such as custom servers, enhanced gameplay, and more community features.</i></li>
+    </ul>
+</div>
