--- a/index.html
+++ b/index.html
@@ -1,128 +1,60 @@
-<!DOCTYPE html>
-<html lang='en'>
-    <head>
-        <title>Bonk Leagues</title>
+---
 
-        <meta charset='utf-8'>
-        <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-        <meta property="og:title" content="Bonk Leagues" />
-        <meta property="og:locale" content="en" />
-        <meta name="description" content="Bonk Leagues - a custom client, skin editor and more for http://bonk.io/" />
-        <meta property="og:description" content="Bonk Leagues - a custom client, skin editor and more for http://bonk.io/" />
-        <link rel="canonical" href="https://bonkleagues.github.io/" />
-        <meta property="og:url" content="https://bonkleagues.github.io/" />
-        <meta property="og:site_name" content="Bonk Leagues" />
-        <meta property="og:image" content="https://bonkleagues.github.io/static/logo.png" />
-        <meta name="theme-color" content="#013e79">
+---
+<a href="client.html"><img src="static/img/thumbnails/thumb1.png" class="homethumb"></a>
+<a href="skins.html"><img src="static/img/thumbnails/thumb2.png" class="homethumb"></a>
+<a href="more.html"><img src="static/img/thumbnails/thumb3.png" class="homethumb"></a>
+<br/><br/><hr/><br/>
+<span class="parthead">Welcome to Bonk Leagues!</span><br/><br/>
+<b>Bonk Leauges is a useful website for the popular game <a href="http://bonk.io" target="_blank">bonk.io</a> where you can:</b><br/><br/>- Use our custom <a href="client.html">Bonk Leagues Client</a> with many new useful features for Bonk,
+<br/>- Manage, save and share unlimited skins</a> with ease with our <a href="skins.html">Skin Manager</a>,<br/><i>- And many more tools for your bonk.io needs... (see the menu above)</i>
+<br/><br/><hr/><br/><span class="parthead">Why use Bonk Leagues?</span><br/><br/>
+Bonk Leagues is your go-to website for everything bonk.io, full of useful gaming tools.<br/><b>Just listen to these testimonials:</b><br/><br/>
+<div class="testimonial">
+    <i>"I think that Bonk Leagues is pretty useful for any bonk.io player"</i><br/><br/>
+    - <b>Rethlit</b>
+    <br/>-<br/>&#9733;&#9733;&#9733;&#9733;&#9733; 4.5/5
+</div>
+<div class="testimonial">
+    <i>It isn't FULL of features yet, but with a long period of no updates from Chaz it keeps Bonk.io fresh &amp; innovated.</i><br/>
+    - <b>ilikestalker</b>
+    <br/>-<br/>&#9733;&#9733;&#9733;&#9733;&#9734; 4/5
+</div>
+<br/>
+<div class="testimonial">
+    <i>"Bonk Leagues is easy, well-built &amp; active with the community."</i><br/>
+    - <b>Discoli</b>
+    <br/>-<br/>&#9733;&#9733;&#9733;&#9733;&#9733; 5/5
+</div>
+<div class="testimonial">
+    <i>"Mac n Cheese is my choice of beverages"</i><br/><br/>
+    - <b>Gayfish</b>
+    <br/>-<br/>?&iquest;?&iquest;? 2113/5
+</div>
 
-        <link rel="icon" type="image/png" href="static/logo.png">
-        <link rel='stylesheet' type='text/css' href='static/style.css#4'>
-
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112446948-1"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-
-            gtag('config', 'UA-112446948-1');
-        </script>
-    </head>
-    <body>
-        <header>
-            <a href="index.html" id="defaulta">
-                <img src="static/logo.png" id="logo" draggable="false">
-                <h1>Bonk Leagues<span id="typing">_</span></h1>
-            </a>
-            <br/>
-            <nav>
-                <a class="sel" href="index.html">Home</a>
-                <a href="client.html">Client</a>
-                <a href="skins.html">Skin Manager</a>
-                <span id="more">More &#9660;<div class="moredd"><a href="quickplay.html">Quick Play Map Checker</a></div></span>
-                <!--
-                <a href="https://discord.gg/A5zpj2a" target="_blank">Discord</a>
-                -->
-            </nav>
-        </header>
-        <section>
-            <a href="client.html"><img src="static/thumb1.png" class="homethumb"></a>
-            <a href="skins.html"><img src="static/thumb2.png" class="homethumb"></a>
-            <a href="more.html"><img src="static/thumb3.png" class="homethumb"></a>
-            <br/><br/><hr/><br/>
-            <span class="parthead">Welcome to Bonk Leagues!</span><br/><br/>
-            <b>Bonk Leauges is a useful website for the popular game <a href="http://bonk.io" target="_blank">bonk.io</a> where you can:</b><br/><br/>- Use our custom <a href="client.html">Bonk Leagues Client</a> with many new useful features for Bonk,
-            <br/>- Manage, save and share unlimited skins</a> with ease with our <a href="skins.html">Skin Manager</a>,<br/><i>- And many more tools for your bonk.io needs... (see the menu above)</i>
-            <br/><br/><hr/><br/><span class="parthead">Why use Bonk Leagues?</span><br/><br/>
-            Bonk Leagues is your go-to website for everything bonk.io, full of useful gaming tools.<br/><b>Just listen to these testimonials:</b><br/><br/>
-            <div class="testimonial">
-                <i>"I think that Bonk Leagues is pretty useful for any bonk.io player"</i><br/><br/>
-                - <b>Rethlit</b>
-                <br/>-<br/>&#9733;&#9733;&#9733;&#9733;&#9733; 4.5/5
-            </div>
-            <div class="testimonial">
-                <i>It isn't FULL of features yet, but with a long period of no updates from Chaz it keeps Bonk.io fresh &amp; innovated.</i><br/>
-                - <b>ilikestalker</b>
-                <br/>-<br/>&#9733;&#9733;&#9733;&#9733;&#9734; 4/5
-            </div>
-            <br/>
-            <div class="testimonial">
-                <i>"Bonk Leagues is easy, well-built &amp; active with the community."</i><br/>
-                - <b>Discoli</b>
-                <br/>-<br/>&#9733;&#9733;&#9733;&#9733;&#9733; 5/5
-            </div>
-            <div class="testimonial">
-                <i>"Mac n Cheese is my choice of beverages"</i><br/><br/>
-                - <b>Gayfish</b>
-                <br/>-<br/>?&iquest;?&iquest;? 2113/5
-            </div>
-
-            <br/><br/><br/><span class="parthead">Our Team</span><br/><br/>
-            Here are the main people behind making Bonk Leagues and related content:<br/><br/>
-            <div class="sampleskin">
-                <img class="sknframe" src="https://cdn.discordapp.com/avatars/389006875854897176/a_ff93a0310ab65fffba699813f64c2577.gif?size=128">
-                <div>
-                    <b>Discoli</b><span style="font-size:12px;color:#666;">#8295</span><br/><i>CEO &amp; P-Code Dev</i>
-                </div>
-            </div>
-            <div class="sampleskin">
-                <img class="sknframe" src="https://cdn.discordapp.com/avatars/233986468429692939/b69c73b4926ceb198e89cffc381455a8.png?size=128">
-                <div>
-                    <b>Finbae</b><span style="font-size:12px;color:#666;">#2180</span><br/><i>Frontend &amp; Web Dev</i>
-                </div>
-            </div>
-            <div class="sampleskin">
-                <img class="sknframe" src="https://cdn.discordapp.com/avatars/211854848398721034/9add9cff074a22d184da274ea97db4b5.png?size=128">
-                <div>
-                    <b>PitsPower</b><span style="font-size:12px;color:#666;">#9562</span><br/><i>Backend &amp; Bot Dev</i>
-                </div>
-            </div>
-            <div class="sampleskin">
-                <img class="sknframe" src="https://cdn.discordapp.com/avatars/126513474367913984/8b269cf7d3f0c2ffced82802e8ab0538.png?size=128">
-                <div>
-                    <b>Dionysus</b><span style="font-size:12px;color:#666;">#1409</span><br/><i>Bad Dev lol</i>
-                </div>
-            </div>
-            <br/><hr/><br/>
-
-            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                <!-- Bonk (Money Grab) Leagues -->
-                <ins class="adsbygoogle"
-                style="display:block"
-                data-ad-client="ca-pub-8362785424135480"
-                data-ad-slot="5034197850"
-                data-ad-format="auto"></ins>
-            <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
-            <div id="adbnote">It looks like you have an ad-blocker on.<br/><br/><b>To help support the development of Bonk Leagues and the Skin Manager, we'd like it if you would disable it &lt;3.</b></div>
-
-            <span style="position:fixed;bottom:15px;right:15px;font-size:16px;z-index:998;">website by Finbae<span style="font-size:11px;color:#666;">#2180</span></span>            
-        </section>
-
-
-        <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-        <script src="static/bab.js"></script>
-        <script src="static/script.js#2"></script>
-    </body>
-</html>
+<br/><br/><br/><span class="parthead">Our Team</span><br/><br/>
+Here are the main people behind making Bonk Leagues and related content:<br/><br/>
+<div class="sampleskin">
+    <img class="sknframe" src="https://cdn.discordapp.com/avatars/389006875854897176/a_ff93a0310ab65fffba699813f64c2577.gif?size=128">
+    <div>
+        <b>Discoli</b><span style="font-size:12px;color:#666;">#8295</span><br/><i>CEO &amp; P-Code Dev</i>
+    </div>
+</div>
+<div class="sampleskin">
+    <img class="sknframe" src="https://cdn.discordapp.com/avatars/233986468429692939/b69c73b4926ceb198e89cffc381455a8.png?size=128">
+    <div>
+        <b>Finbae</b><span style="font-size:12px;color:#666;">#2180</span><br/><i>Frontend &amp; Web Dev</i>
+    </div>
+</div>
+<div class="sampleskin">
+    <img class="sknframe" src="https://cdn.discordapp.com/avatars/211854848398721034/9add9cff074a22d184da274ea97db4b5.png?size=128">
+    <div>
+        <b>PitsPower</b><span style="font-size:12px;color:#666;">#9562</span><br/><i>Backend &amp; Bot Dev</i>
+    </div>
+</div>
+<div class="sampleskin">
+    <img class="sknframe" src="https://cdn.discordapp.com/avatars/126513474367913984/8b269cf7d3f0c2ffced82802e8ab0538.png?size=128">
+    <div>
+        <b>Dionysus</b><span style="font-size:12px;color:#666;">#1409</span><br/><i>Bad Dev lol</i>
+    </div>
+</div>
