--- a/quickplay.html
+++ b/quickplay.html
@@ -1,199 +1,42 @@
-<!DOCTYPE html>
-<html lang='en'>
-    <head>
-        <title>Bonk Leagues</title>
+---
+title: 'Bonk.io Quick Play Map Checker'
+desc: 'See the current maps featured in Bonk.io Quick Play rotation.'
+canonical: 'https://bonkleagues.github.io/quickplay.html'
+sel: ''
+scriptToUse: 'qpscript'
+---
+<style>
+    .cgr{
+        color:green;
+    }
+    .cre{
+        color:red;
+    }
+    .cdg{
+        color:grey;
+    }
+</style>
+<span class="parthead">Maps Currently Featured in Quick Play Rotation</span><br/><br/>
 
-        <meta charset='utf-8'>
-        <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-        <meta property="og:title" content="Bonk Leagues" />
-        <meta property="og:locale" content="en" />
-        <meta name="description" content="Bonk Leagues - a custom client, skin editor and more for http://bonk.io/" />
-        <meta property="og:description" content="Bonk Leagues - a custom client, skin editor and more for http://bonk.io/" />
-        <link rel="canonical" href="https://bonkleagues.github.io/" />
-        <meta property="og:url" content="https://bonkleagues.github.io/" />
-        <meta property="og:site_name" content="Bonk Leagues" />
-        <meta property="og:image" content="https://bonkleagues.github.io/static/logo.png" />
-        <meta name="theme-color" content="#013e79">
+<div id="loaded" style="display:none;">
+    <b>Showing <span id="mapnum">0</span> maps:</b><br/><i style="font-size:12px;">(TIP: you can use CTRL+F to search!)</i>
+    <br/><br/>
+    Sort: 
+    <select id="sel1">
+        <option value="default" selected>Default</option>
+        <option value="ldratio">L/D Ratio</option>
+        <option value="date">Creation Date</option>
+    </select>
+    <select id="sel2">
+        <option value="des">Descending &#9660;</option>
+        <option value="asc" selected>Ascending &#9650;</option>
+    </select>
+    <br/><br/><hr/></ht><br/>
+</div>
 
-        <link rel="icon" type="image/png" href="static/logo.png">
-        <link rel='stylesheet' type='text/css' href='static/style.css#3'>
+<div id="loading" style="width:400px;text-align:left;white-space: nowrap;margin:0 auto;">
+    <center><b>LOADING...</b><br/><br/><i>This may take a while, so here's a cat<br/>picture to look at while you wait:</i><br/><br/>
+    <img class="shadowimg" src="https://place.cat/c/400/300"></center>
+</div>
 
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112446948-1"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-
-            gtag('config', 'UA-112446948-1');
-        </script>
-
-        <style>
-        .cgr{
-            color:green;
-        }
-        .cre{
-            color:red;
-        }
-        .cdg{
-            color:grey;
-        }
-        </style>
-    </head>
-    <body>
-        <header>
-            <a href="index.html" id="defaulta">
-                <img src="static/logo.png" id="logo" draggable="false">
-                <h1>Bonk Leagues<span id="typing">_</span></h1>
-            </a>
-            <br/>
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="client.html">Client</a>
-                <a href="skins.html">Skin Manager</a>
-                <span id="more">More &#9660;<div class="moredd"><a href="quickplay.html">Quick Play Map Checker</a></div></span>
-                <!--
-                <a href="https://discord.gg/A5zpj2a" target="_blank">Discord</a>
-                -->
-            </nav>
-        </header>
-        <section>
-            <span class="parthead">Maps Currently Featured in Quick Play Rotation</span><br/><br/>
-
-            <div id="loaded" style="display:none;">
-                <b>Showing <span id="mapnum">0</span> maps:</b><br/><i style="font-size:12px;">(TIP: you can use CTRL+F to search!)</i>
-                <br/><br/>
-                Sort: 
-                <select id="sel1">
-                    <option value="default" selected>Default</option>
-                    <option value="ldratio">L/D Ratio</option>
-                    <option value="date">Creation Date</option>
-                </select>
-                <select id="sel2">
-                    <option value="des">Descending &#9660;</option>
-                    <option value="asc" selected>Ascending &#9650;</option>
-                </select>
-                <br/><br/><hr/></ht><br/>
-            </div>
-
-            <div id="loading" style="width:400px;text-align:left;white-space: nowrap;margin:0 auto;">
-                <center><b>LOADING...</b><br/><br/><i>This may take a while, so here's a cat<br/>picture to look at while you wait:</i><br/><br/>
-                <img class="shadowimg" src="https://place.cat/c/400/300"></center>
-            </div>
-
-            <div id="loadedcont" style="width:400px;text-align:left;white-space: nowrap;margin:0 auto;display:none"></div>
-            
-            <span style="position:fixed;bottom:15px;right:15px;font-size:16px;z-index:998;">website by Finbae<span style="font-size:11px;color:#666;">#2180</span></span>            
-        
-            <br/><hr/><br/>
-
-            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                <!-- Bonk (Money Grab) Leagues -->
-                <ins class="adsbygoogle"
-                style="display:block"
-                data-ad-client="ca-pub-8362785424135480"
-                data-ad-slot="5034197850"
-                data-ad-format="auto"></ins>
-            <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
-            <div id="adbnote">It looks like you have an ad-blocker on.<br/><br/><b>To help support the development of Bonk Leagues and the Skin Manager, we'd like it if you would disable it &lt;3.</b></div>
-
-        </section>
-
-
-        <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-        <script src="static/bab.js"></script>
-        <script src="static/script.js#3"></script>
-        <script>
-        function getQueryVariable(variable,og) {
-            var query = og;
-            var vars = query.split('&');
-            for (var i = 0; i < vars.length; i++) {
-                var pair = vars[i].split('=');
-                if (decodeURIComponent(pair[0]) == variable) {
-                    return decodeURIComponent(pair[1]);
-                }
-            }
-            console.log('Query variable %s not found', variable);
-        }
-        function pad(n, width, z) {
-            z = z || '0';
-            n = n + '';
-            return n.length >= width ? n : new Array(width - n.length + 1).join(z) + n;
-        }
-        function reverseArr(input) {
-            var ret = new Array;
-            for(var i = input.length-1; i >= 0; i--) {
-                ret.push(input[i]);
-            }
-            return ret;
-        }
-        var months = ["Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"];
-
-        var stuff = [];
-        $.ajax({
-            type: "POST",
-            url: "https://bonkleaguebot.herokuapp.com/cors/physics/scripts/maps9.php",
-            dataType: "text",
-            data: {
-                startingfrom: 0,
-                noresults: 60,
-                task: 2,
-                getrule: 'quickmatchrotation'
-            }})
-        .done(function(meme){
-            var i = 0;
-            while(getQueryVariable('authorname'+i, meme)){
-                stuff.push({
-                    id: i,
-                    mapname: getQueryVariable('mapname'+i, meme).replace(/\+/g, ' '),
-                    authorname: getQueryVariable('authorname'+i, meme),
-                    thumbsup: parseInt(getQueryVariable('thumbsup'+i, meme)),
-                    thumbsdown: parseInt(getQueryVariable('thumbsdown'+i, meme)),
-                    ldratio: parseInt(getQueryVariable('thumbsup'+i, meme)) / parseInt(getQueryVariable('thumbsdown'+i, meme)),
-                    creationdate: new Date(getQueryVariable('creationdate'+i, meme))
-                });
-                i++;
-            }
-            updateStuff('default', 'asc');
-        })
-        .fail(function(e){ alert('Error ['+e.status+']: '+e.statusText); });
-
-        function updateStuff(sort, ascdes){
-            $('#loadedcont').html('');
-            var stuff2 = stuff;
-            if(sort == 'default'){
-                stuff2.sort(function(obj1, obj2) {
-                    return obj1.id - obj2.id;
-                });
-            }
-            if(sort == 'ldratio'){
-                stuff2.sort(function(obj1, obj2) {
-                    return obj2.ldratio - obj1.ldratio;
-                });
-            }
-            if(sort == 'date'){
-                stuff2.sort(function(obj1, obj2) {
-                    return obj2.creationdate - obj1.creationdate;
-                });
-            }
-            if(ascdes == 'asc'){
-                stuff2 = reverseArr(stuff2);
-            }
-            console.log(stuff);
-            $.each(stuff2, function(i, thing){
-                $('#loadedcont').append(`<b>${pad(i+1,3)}. "${thing.mapname}</b>" by <i>${thing.authorname}<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(<span class="cgr">+${thing.thumbsup.toLocaleString()}</span>/<span class="cre">-${thing.thumbsdown.toLocaleString()}</span>) <span class="cdg">- ${thing.ldratio.toFixed(2)} L/D</span></i><br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="cdg" style="font-size:12px;vertical-align:top;">Created: ${thing.creationdate.getDate()} ${months[thing.creationdate.getMonth()]} ${thing.creationdate.getFullYear()} - ${pad(thing.creationdate.getHours(),2)}:${pad(thing.creationdate.getMinutes(),2)}:${pad(thing.creationdate.getSeconds(),2)} | ID: #${thing.id}</span><br/>`);
-                $('#mapnum').text(i+1);
-            });
-            $('#loading').slideUp();
-            $('#loaded').slideDown();
-            $('#loadedcont').fadeIn();
-        }
-
-        $('select').change(function(){
-            updateStuff($('#sel1').val(), $('#sel2').val());
-        });
-        </script>
-    </body>
-</html>
+<div id="loadedcont" style="width:400px;text-align:left;white-space: nowrap;margin:0 auto;display:none"></div>
