Done a few "Quick fixes", titles fixed, restructured a couple things, fixed some css.

--- a/client.html
+++ b/client.html
@@ -1,5 +1,6 @@
 ---
 title: 'Bonk Leagues Client'
+shorttitle: 'Bonk Leagues Client'
 desc: 'The Bonk Leagues Client is a modified client for the game http://bonk.io/'
 canonical: 'https://bonkleagues.github.io/client.html'
 sel: 'client'
