--- a/skins.html
+++ b/skins.html
@@ -1,5 +1,6 @@
 ---
 title: 'Bonk Leagues Skin Manager'
+shorttitle: 'Skin Manager'
 desc: 'Save, load, manage and share unlimited amounts of skins for bonk.io.'
 canonical: 'https://bonkleagues.github.io/skins.html'
 sel: 'skins'
