A whole lot of bug fixes, quick play map checker now loads a lot faster, and possible fix for issue #3 (please test)

--- a/quickplay.html
+++ b/quickplay.html
@@ -34,9 +34,6 @@ scriptToUse: 'qpscript'
     <br/><br/><hr/></ht><br/>
 </div>
 
-<div id="loading" style="width:400px;text-align:left;white-space: nowrap;margin:0 auto;">
-    <center><b>LOADING...</b><br/><br/><i>This may take a while, so here's a cat<br/>picture to look at while you wait:</i><br/><br/>
-    <img class="shadowimg" src="https://place.cat/c/400/300"></center>
-</div>
+<div id="loading" style="width:200px;text-align:left;white-space: nowrap;margin:0 auto;text-align:center;">loading...</div>
 
 <div id="loadedcont" style="width:400px;text-align:left;white-space: nowrap;margin:0 auto;display:none"></div>
