--- a/more.html
+++ b/more.html
@@ -3,6 +3,7 @@ sel: ''
 ---
 <span class="parthead">More Bonk Leagues Tools</span><br/><br/>
 - <a href="quickplay.html">Quick Play Map Checker</a> - See a list of all the maps currently in Quick Play rotation.<br/>
+- <a href="xpchecker.html">XP Checker</a> - Easily check any Bonk player's XP, just by typing their name.<br/>
 <br/>-<br/>
 <i>More stuff here soon!</i>
 <br/>
