**Big Bonk Leagues update out now!** - ``` - Our Discord server is finally out! Visit our website to join it (you know the URL!). < - Skin Manager bug fixes, mainly fixed the share images having problems. - New Sample Skins, from Nix812 and me (may have missed some though, please DM me if I did). - Other general bug fixes and style fixes. ```

--- a/client.html
+++ b/client.html
@@ -13,8 +13,8 @@ sel: 'client'
 </div>
 <!--<a id="buttonspec" class="button">⇒ Play Now ⇐</a>-->
 <b>
-The Bonk Leagues Client will be released very Soon<sup>TM</sup><br/>
-<span style="font-weight:400">To stay updated on the Client's development, you can join the <a href="https://discord.gg/5SB5fYm" target="_blank">M4K Bonk.io Discord Server</a>.<br/><br/>
+Development of the Bonk Leagues Client is currently on hold.<br/>
+<span style="font-weight:400">Due to recent updates, and Chaz not approving of our client, we have put the development of it on hold for now. Sorry.<br/><br/>
 Meanwhile, you can use our useful <a href="skins.html">Skin Manager</a>.</span>
 </b>
 <br/><br/>
