--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 ---
 
 ---
+<!--
 <a href="client.html"><img src="static/img/thumbnails/thumb1.png" class="homethumb"></a>
+-->
 <a href="skins.html"><img src="static/img/thumbnails/thumb2.png" class="homethumb"></a>
+<a href="xpchecker.html"><img src="static/img/thumbnails/thumb4.png" class="homethumb"></a>
 <a href="more.html"><img src="static/img/thumbnails/thumb3.png" class="homethumb"></a>
-<br/><br/><hr/><br/>
+<br/><br/><a style="color:#7289DA" href="https://discord.gg/RadQ7xx" target="_blank">Join our Discord server!</a><br/><hr/><br/>
 <span class="parthead">Welcome to Bonk Leagues!</span><br/><br/>
-<b>Bonk Leauges is a useful website for the popular game <a href="http://bonk.io" target="_blank">bonk.io</a> where you can:</b><br/><br/>- Use our custom <a href="client.html">Bonk Leagues Client</a> with many new useful features for Bonk,
-<br/>- Manage, save and share unlimited skins</a> with ease with our <a href="skins.html">Skin Manager</a>,<br/><i>- And many more tools for your bonk.io needs... (see the menu above)</i>
+<b>Bonk Leauges is a useful website for the popular game <a href="http://bonk.io" target="_blank">bonk.io</a> where you can:</b><br/><br/>
+- Manage, save and share unlimited skins</a> with ease with our <a href="skins.html">Skin Manager</a>,<br/>
+- Easily see a player's XP with our <a href="xpchecker.html">XP Checker</a>,<br/>
+<i>- And use many more tools for your bonk.io needs... (see the menu above)</i>
 <br/><br/><hr/><br/><span class="parthead">Why use Bonk Leagues?</span><br/><br/>
 Bonk Leagues is your go-to website for everything bonk.io, full of useful gaming tools.<br/><b>Just listen to these testimonials:</b><br/><br/>
 <div class="testimonial">
