--- a/skins.html
+++ b/skins.html
@@ -137,11 +137,12 @@ styleToUse: 'skinstyle'
     <span class="parthead">Info</span><br/>
     <p style="font-weight:bold;">Welcome to the Bonk Leagues Skin Manager! To start, log in above.</p>
     <p>Here you can save, load, manage and share unlimited amounts of skins for bonk.io.</p>
-    <p>You can also store multiple skins and transfer them accross accounts!</p>
+    <p>You can also store multiple skins and transfer them across accounts!</p><br/>
+    <iframe style="max-width:560px;height:315px;width:100%;" src="https://www.youtube.com/embed/eOEIlxEa8h0?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <br/>
     <br/><br/>
     <span class="parthead">Feedback</span><br/>
-    <p>The Bonk Leagues Skin Manager is still not <b>fully</b> complete, and may be buggy at the moment.</p>
-    <p>If you encounter a bug, or want to give feedback, message @Finbae#2180 in the <a href="https://discord.gg/5SB5fYm" target="_blank">M4K Bonk.io Discord Server</a></p>
+    <p>If you have ANY ideas, encounter a bug, or want to give feedback, feel free to tell us in <a href="https://discord.gg/RadQ7xx" target="_blank">our Discord server.</a></p>
     <p>Also, we are always looking for any good skin makers to make some skins for the sample skins page (you will be credited!)</p>
 </div>
 <div id="overlay"></div>
