server status should be added hopefully work

--- a/more.html
+++ b/more.html
@@ -4,6 +4,7 @@ sel: ''
 <span class="parthead">More Bonk Leagues Tools</span><br/><br/>
 - <a href="quickplay.html">Quick Play Map Checker</a> - See a list of all the maps currently in Quick Play rotation.<br/>
 - <a href="xpchecker.html">XP Checker</a> - Easily check any Bonk player's XP, just by typing their name.<br/>
+- <a href="serverstatus.html">Bonk.io Server Status</a> - Check bonk.io's server status.<br/>
 <br/>-<br/>
 <i>More stuff here soon!</i>
 <br/>
