--- a/serverstatus.html
+++ b/serverstatus.html
@@ -1,9 +1,9 @@
 ---
 title: 'Bonk.io Server Status'
-desc: 'Check bonk.io's server status.'
+desc: 'Check the bonk.io server status.'
 canonical: 'https://bonkleagues.github.io/serverstatus.html'
 sel: ''
-scriptToUse: 'statusscript.js'
+scriptToUse: 'statusscript'
 ---
 <style>
     .cgr{
@@ -17,7 +17,7 @@ scriptToUse: 'statusscript.js'
     }
 </style>
 <span class="parthead">Bonk.io Server Status</span><br/><br/>
-Bonk.io servers are currently <span id="status">loading...</span>!
+Bonk.io servers are currently <span id="status">...</span>!
 <br/><br/>
 <i style="font-size:12px;">~ Auto-updates every 20 secs. ~</i>
 <br/>
