updated server status checker, more info provided, also added it to navigation and did some other minor stuff https://i.imgur.com/cqU2Hoy.png

--- a/serverstatus.html
+++ b/serverstatus.html
@@ -17,7 +17,11 @@ scriptToUse: 'statusscript'
     }
 </style>
 <span class="parthead">Bonk.io Server Status</span><br/><br/>
-Bonk.io servers are currently <span id="status">...</span>!
+<i style="font-size:12px;">Note: this page auto-updates every 20 seconds.</i><br/><br/>
+<span style="font-size:24px;">Bonk.io is currently <span id="status">...</span>!</span>
 <br/><br/>
-<i style="font-size:12px;">~ Auto-updates every 20 secs. ~</i>
+<b>Website - </b><span id="status-web">...</span><br/>
+<b>Database - </b><span id="status-db">...</span>
+<br/><br/>
+<i id="downholder" style="display:none;">Bonk.io has been down for <span id="downtime" style="font-weight:bold">...</span>.</i>
 <br/>
