changed testimonial, avatar images now hosted locally, better font for browsers that aren't chrome

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@ Bonk Leagues is your go-to website for everything bonk.io, full of useful gaming
 </div>
 <br/>
 <div class="testimonial">
-    <i>"Bonk Leagues is easy, well-built &amp; active with the community."</i><br/>
-    - <b>Discoli</b>
-    <br/>-<br/>&#9733;&#9733;&#9733;&#9733;&#9733; 5/5
+    <i>"The staff are friendly peeps and the features are on point 👌"</i><br/>
+    - <b>The Blue Blur</b>
+    <br/>-<br/>&#9733;&#9733;&#9733;&#9733;&#9733; 4.9/5
 </div>
 <div class="testimonial">
     <i>"Mac n Cheese is my choice of beverages"</i><br/><br/>
@@ -40,25 +40,25 @@ Bonk Leagues is your go-to website for everything bonk.io, full of useful gaming
 <br/><br/><br/><span class="parthead">Our Team</span><br/><br/>
 Here are the main people behind making Bonk Leagues and related content:<br/><br/>
 <div class="sampleskin">
-    <img class="sknframe" src="https://cdn.discordapp.com/avatars/389006875854897176/a_ff93a0310ab65fffba699813f64c2577.gif?size=128">
+    <img class="sknframe" src="static/img/avatars/discoli.gif">
     <div>
         <b>Discoli</b><span style="font-size:12px;color:#666;">#8295</span><br/><i>CEO &amp; P-Code Dev</i>
     </div>
 </div>
 <div class="sampleskin">
-    <img class="sknframe" src="https://cdn.discordapp.com/avatars/233986468429692939/b69c73b4926ceb198e89cffc381455a8.png?size=128">
+    <img class="sknframe" src="static/img/avatars/finbae.png">
     <div>
         <b>Finbae</b><span style="font-size:12px;color:#666;">#2180</span><br/><i>Frontend &amp; Web Dev</i>
     </div>
 </div>
 <div class="sampleskin">
-    <img class="sknframe" src="https://cdn.discordapp.com/avatars/211854848398721034/9add9cff074a22d184da274ea97db4b5.png?size=128">
+    <img class="sknframe" src="static/img/avatars/its_magic.png">
     <div>
         <b>PitsPower</b><span style="font-size:12px;color:#666;">#9562</span><br/><i>Backend &amp; Bot Dev</i>
     </div>
 </div>
 <div class="sampleskin">
-    <img class="sknframe" src="https://cdn.discordapp.com/avatars/126513474367913984/8b269cf7d3f0c2ffced82802e8ab0538.png?size=128">
+    <img class="sknframe" src="static/img/avatars/dionysus.png">
     <div>
         <b>Dionysus</b><span style="font-size:12px;color:#666;">#1409</span><br/><i>Bad Dev lol</i>
     </div>
