new server status info passed in title https://i.imgur.com/Qd1c6p5.png

--- a/serverstatus.html
+++ b/serverstatus.html
@@ -1,6 +1,6 @@
 ---
-title: 'Bonk.io Server Status'
-desc: 'Check the bonk.io server status.'
+title: 'Bonk.io Server Status | Bonk.io down? Check outages here'
+desc: 'Bonk.io down? Check the bonk.io server status here.'
 canonical: 'https://bonkleagues.github.io/serverstatus.html'
 sel: ''
 scriptToUse: 'statusscript'
