--- a/serverstatus.html
+++ b/serverstatus.html
@@ -23,5 +23,7 @@ scriptToUse: 'statusscript'
 <b>Website - </b><span id="status-web">...</span><br/>
 <b>Database - </b><span id="status-db">...</span>
 <br/><br/>
-<i id="downholder" style="display:none;">Bonk.io has been down for <span id="downtime" style="font-weight:bold">...</span>.</i>
+<!--<i id="downholder" style="display:none;">Bonk.io has been down for <span id="downtime" style="font-weight:bold">...</span>.</i>-->
+<i id="downholder" style="display:none;"><b>Important: </b>we are currently having (hopefully temporary) server issues with Bonk Leagues CORS-enabled requests. We will keep you updated in the Bonk Leagues Discord server. <span id="downtime" style="font-weight:bold"></span></i>
+
 <br/>
