--- a/serverstatus.html
+++ b/serverstatus.html
@@ -7,7 +7,7 @@ scriptToUse: 'statusscript'
 ---
 <style>
     .cgr{
-        color:green;
+        color:limegreen;
     }
     .cre{
         color:red;
@@ -15,14 +15,55 @@ scriptToUse: 'statusscript'
     .cdg{
         color:grey;
     }
+    .cor{
+        color:orange;
+    }
+    .spin img {
+        border-radius:360px;
+    }
+    .spin {
+        border-radius:360px;
+        box-shadow: 0px 0px 5px 0px #fb016e;
+        animation: spin 2s infinite;
+    }
+    @keyframes spin {
+        0% {
+            transform: rotate(0deg);
+            box-shadow: 0px 0px 5px 0px #fb016e;
+        }
+        50% {
+            transform: rotate(360deg);
+            box-shadow: 0px 0px 35px 0px #fb016e;
+        }
+        100% {
+            transform: rotate(720deg);
+            box-shadow: 0px 0px 5px 0px #fb016e;
+        }
+    }
 </style>
 <span class="parthead">Bonk.io Server Status</span><br/><br/>
-<i style="font-size:12px;">Note: this page auto-updates every 20 seconds.</i><br/><br/>
-<span style="font-size:24px;">Bonk.io is currently <span id="status">...</span>!</span>
-<br/><br/>
-<b>Website - </b><span id="status-web">...</span><br/>
-<b>Database - </b><span id="status-db">...</span>
-<br/><br/>
-<i id="downholder" style="display:none;">Bonk.io has been down for <span id="downtime" style="font-weight:bold">...</span>.</i>
+
+<span style="font-size:24px;">Bonk.io is currently <span id="overallStatusBN">...</span></span><br/><br/>
+
+<b>Website - </b><span id="statusBN-web">...</span><br/>
+<b>Database - </b><span id="statusBN-db">...</span>
 
 <br/>
+
+<!--<i id="downholder" style="display:none;"><br/>Bonk.io has been down for <span id="downtime" style="font-weight:bold">...</span>.</i>-->
+
+<br/><br/><hr/><br/><br/>
+
+<span class="parthead">Bonk Leagues Server Status</span><br/><br/>
+
+<b>Bonk Leagues Backend - </b><span id="overallStatusBL">...</span>
+<br/><i id="extrainfo" style="display:none;font-size:12px;color:red;"><br/>Note: Could not connect to the Bonk Leagues server backend, this may mean the<br/>Skin Manager, XP checker and other BL services will not work correctly for now. Sorry :/<br/></i><br/>
+
+<div style="display:none;background:#222;max-width:700px;margin:0 auto;text-align:left;padding:10px 15px;" id="devDetails"><pre style="margin:0;padding:0;overflow:auto;padding-bottom:5px;font-size:14px" id="devOutput">...</pre></div>
+<button class="button" id="devBtn" style="font-size:20px;padding:5px 10px;animation:none;margin-top:15px;">Toggle dev details</button>
+
+<br/><br/><br/>
+<i style="font-size:12px;">Note: this page auto-updates every 40 seconds.</i><br/>
+
+<div class="overlay toHide" style="position:fixed;top:0;left:0;width:100%;height:100%;background:#000;opacity:0.7;"></div>
+<div class="loaderOverlay toHide" style="position:fixed;top:50%;left:50%;transform:translate(-50%,-50%)"><img src="/static/img/icons/loading.svg" class="spin" width="100"></div>
