removed discoli from bl team, also updated images

--- a/index.html
+++ b/index.html
@@ -38,13 +38,7 @@ Bonk Leagues is your go-to website for everything bonk.io, full of useful gaming
 </div>
 
 <br/><br/><br/><span class="parthead">Our Team</span><br/><br/>
-Here are the main people behind making Bonk Leagues and related content:<br/><br/>
-<div class="sampleskin">
-    <img class="sknframe" src="static/img/avatars/discoli.gif">
-    <div>
-        <b>Discoli</b><span style="font-size:12px;color:#666;">#8295</span><br/><i>CEO &amp; P-Code Dev</i>
-    </div>
-</div>
+Here are the people behind making Bonk Leagues and related content:<br/><br/>
 <div class="sampleskin">
     <img class="sknframe" src="static/img/avatars/finbae.png">
     <div>
@@ -58,8 +52,8 @@ Here are the main people behind making Bonk Leagues and related content:<br/><br
     </div>
 </div>
 <div class="sampleskin">
-    <img class="sknframe" src="static/img/avatars/dionysus.png">
+    <img class="sknframe" src="static/img/avatars/dionysus.gif">
     <div>
-        <b>Dionysus</b><span style="font-size:12px;color:#666;">#1409</span><br/><i>Bad Dev lol</i>
+        <b>Dionysus</b><span style="font-size:12px;color:#666;">#0001</span><br/><i>Bad Dev lol</i>
     </div>
 </div>
