massive update lol

--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 ---
 
 ---
-<!--
-<a href="client.html"><img src="static/img/thumbnails/thumb1.png" class="homethumb"></a>
--->
+
+<!--<a href="client.html"><img src="static/img/thumbnails/thumb1.png" class="homethumb"></a>-->
+<a href="editor.html"><img src="static/img/thumbnails/thumb5.png" class="homethumb"></a>
 <a href="skins.html"><img src="static/img/thumbnails/thumb2.png" class="homethumb"></a>
 <a href="xpchecker.html"><img src="static/img/thumbnails/thumb4.png" class="homethumb"></a>
+<a href="quickplay.html"><img src="static/img/thumbnails/thumb6.png" class="homethumb"></a>
 <a href="more.html"><img src="static/img/thumbnails/thumb3.png" class="homethumb"></a>
-<br/><br/><a style="color:#7289DA" href="https://discord.gg/RadQ7xx" target="_blank">Join our Discord server!</a><br/><hr/><br/>
+
+<br/><br/><a style="color:#7289DA" href="https://discord.gg/RadQ7xx" target="_blank">Join our Discord server!</a><br/><br/><hr/><br/>
 <span class="parthead">Welcome to Bonk Leagues!</span><br/><br/>
 <b>Bonk Leauges is a useful website for the popular game <a href="http://bonk.io" target="_blank">bonk.io</a> where you can:</b><br/><br/>
-- Manage, save and share unlimited skins</a> with ease with our <a href="skins.html">Skin Manager</a>,<br/>
+- Create and edit skins with revolutionary drag-and-drop controls with out <a href="editor.html">Skin Editor</a>,<br/>
+- Manage, save and share unlimited skins with ease with our <a href="skins.html">Skin Manager</a>,<br/>
 - Easily see a player's XP with our <a href="xpchecker.html">XP Checker</a>,<br/>
 <i>- And use many more tools for your bonk.io needs... (see the menu above)</i>
 <br/><br/><hr/><br/><span class="parthead">Why use Bonk Leagues?</span><br/><br/>
@@ -42,7 +45,7 @@ Here are the people behind making Bonk Leagues and related content:<br/><br/>
 <div class="sampleskin">
     <img class="sknframe" src="static/img/avatars/finbae.png">
     <div>
-        <b>Finbae</b><span style="font-size:12px;color:#666;">#2180</span><br/><i>Frontend &amp; Web Dev</i>
+        <b>Finbae</b><span style="font-size:12px;color:#666;">#1155</span><br/><i>Frontend &amp; Web Dev</i>
     </div>
 </div>
 <div class="sampleskin">
