--- a/more.html
+++ b/more.html
@@ -1,10 +1,18 @@
 ---
 sel: ''
 ---
-<span class="parthead">More Bonk Leagues Tools</span><br/><br/>
-- <a href="quickplay.html">Quick Play Map Checker</a> - See a list of all the maps currently in Quick Play rotation.<br/>
+<style>
+    a{
+        margin-bottom:10px;
+        display:inline-block;
+    }
+</style>
+<span class="parthead">List of All Bonk Leagues Tools</span><br/><br/>
+- <a href="editor.html">Skin Editor</a> - The best way to make bonk.io skins, with an intuative drag-and-drop skin editor.<br/>
+- <a href="skins.html">Skin Manager</a> - Save, load, manage and share unlimited amounts of skins for bonk.io.<br/>
 - <a href="xpchecker.html">XP Checker</a> - Easily check any Bonk player's XP, just by typing their name.<br/>
+- <a href="quickplay.html">Quick Play Map Checker</a> - See a list of all the maps currently in Quick Play rotation.<br/>
 - <a href="serverstatus.html">Bonk.io Server Status</a> - Check bonk.io's server status.<br/>
-<br/>-<br/>
-<i>More stuff here soon!</i>
+<br/>-<br/><br/>
+<i>More stuff is always been added to Bonk Leagues!</i>
 <br/>
