--- a/skins.html
+++ b/skins.html
@@ -8,36 +8,35 @@ scriptToUse: 'skinscript'
 styleToUse: 'skinstyle'
 ---
 <div id="loggedin">
-    <h1>WELCOME, <span class="s-name">X</span>!</h1><br/><br/>
-    <span class="parthead">My Skins</span><br/><br/>
+    <h1>WELCOME, <span class="s-name">X</span>!<a style="font-style:italic;cursor:pointer;text-decoration:underline;font-size:22px;margin-left:10px;" id="logout">LOGOUT</a></h1><br/><br/>
+    <div id="tagUi"><span class="parthead tabBtn tabSel" id="tabAll">ALL SKINS</span><span id="tabCont"></span></div><br/><br/>
     <p id="txt-skin1" style="display:none">You have no saved skins yet. You can use the plus button to add one!<br/><br/>We recommend adding your current skin first.<br/><br/></p>
-    <div class="skincont" style="display:inline-block"></div><div class="skinslot" data-skin="addskin" style="margin-right:0px;"><span style="margin-left:20px;">+</span></div>
-    <br/>
-    <a class="button" style="font-size:24px;padding:5px 10px;animation:none;" onclick="window.location = 'skins.html';">Logout</a>
-    <br/><br/>
-    <p style="font-style:italic;font-size:12px;display:none" class="txt-skin2">Info: click a skin slot above to edit it, apply it, or get its skin code.<br/><br/>-</p>
-    <p style="font-weight:bold;font-size:12px;display:none" class="txt-skin2">
+    <div class="skincont"></div><br/><div class="skinslot" data-skin="addskin" style="margin-right:0px;"><span style="margin-left:20px;">+</span></div>
+    <br/><br/><br/>
+    <p style="font-size:12px;" class="txt-skin2">
+        Info: Skins will apply to your currently active skin slot on Bonk.io.<br/><br/>-<br/>
         Important: Bonk Leagues Skin Manager uses localstorage to save skins, <br/>
         meaning skins are saved only in this browser, NOT YOUR BONK ACCOUNT!<br/><br/>
-        <span style="font-weight:400;font-style:italic">Make sure to backup your skin codes if you are switching computers<br/>or clearing your browser history!</span>
+        <span style="font-weight:bold;font-style:italic">Make sure to backup your skins if you are switching computers<br/>or clearing your browser history!</span><br/><br/><br/>
+        <a class="button" style="font-size:24px;padding:5px 10px;animation:none;" id="backupall">Backup skins</a>
     </p>
     <br/>
 </div>
 
 <div id="addskin">
     <span class="parthead">Add skin from...</span><br/><br/>
+    <div class="choice skinchoice" data-choice="4">
+        <img src="static/img/icons/icon4.png" width="64">
+        <div>
+            <b>Use the Bonk Leagues Skin Editor <span style="color:#fb016e">NEW!</span></b><br/>
+            Create a skin with our new drag-and-drop editor
+        </div>
+    </div>
     <div class="choice skinchoice" data-choice="1">
         <img src="static/img/icons/icon2.png" width="64">
         <div>
             <b>My current skin</b><br/>
             Adds your current skin from bonk.io
-        </div>
-    </div>
-    <div class="choice skinchoice" data-choice="2">
-        <img src="static/img/icons/icon1.png" width="64">
-        <div>
-            <b>Enter skin code</b><br/>
-            Adds a skin from its unique skin code
         </div>
     </div>
     <div class="choice skinchoice" data-choice="3">
@@ -47,31 +46,54 @@ styleToUse: 'skinstyle'
             Pick from a selection of premade skins
         </div>
     </div>
-    <div class="choice skinchoice" data-choice="4">
-        <img src="static/img/icons/icon4.png" width="64">
+    <div class="choice skinchoice" data-choice="2">
+        <img src="static/img/icons/icon1.png" width="64">
         <div>
-            <b>Use the Bonk Leagues Skin Editor <span style="color:#fb016e">COMING SOON!</span></b><br/>
-            Create a skin with our new built-in editor
+            <b>Enter skin code</b><br/>
+            Adds a skin from its unique skin code
         </div>
     </div>
     <br/>
     <a class="button cancel" data-cancel="addskin" style="font-size:24px;padding:5px 10px;">Cancel</a>
 </div>
 
+<div id="addskinslot">
+    <span class="parthead">Select Bonk.io skin slot to add from</span><br/><br/>
+    <div id="bonkslotcont"></div><br/>
+    <a class="button cancel" data-cancel="addskinslot" style="font-size:24px;padding:5px 10px;">Cancel</a>
+</div>
+
 <div id="bleditor" style="display:none">
     <span class="parthead">Bonk Leagues Skin Editor</span><br/><br/>
     <canvas id="canvas" draggable="false"></canvas>
-    
+</div>
+
+<div id="backupPage">
+    <span class="parthead">Backup Skins</span><br/><br/>
+    <i style="font-size:13px;">Info: This section is for importing/exporting skin files to back them up and keep them safe.</i><br/><br/>
+    <a class="button" style="font-size:24px;padding:5px 10px;animation:none;" id="exportbtn">Export all skins to a file</a><br/><br/>
+    <a class="button" style="font-size:24px;padding:5px 10px;animation:none;" id="importbtn">Import skins from a file</a>
+    <input type="file" id="importpicker" style="display:none" accept=".blsm"><br/><br/><br/>
+    <a class="button deleteallbtn" style="font-size:24px;padding:5px 10px;animation:none;">Delete all my skins</a><br/><br/><hr/><br/>
+    <a class="button cancel" data-cancel="backupPage" style="font-size:24px;padding:5px 10px;margin-left:-5px;animation:none">Back</a>
+</div>
+
+<div id="smpskinscat">
+    <span class="parthead">Sample Skin Categories</span><br/><br/>
+    <div id="smpskincatcont">loading...</div>
+    <br/><br/>
+    <a class="button cancel" data-cancel="smpskinscat" style="font-size:24px;padding:5px 10px;animation:none;margin-left:-5px;">Cancel</a><br/><br/>
+    <p style="font-style:italic;font-size:12px">Info: If you want your skin featured here for people to use, feel free to message the skin share link to @Finbae#115 on Discord!</p>
 </div>
 
 <div id="smpskins">
-    <span class="parthead">Sample Skins</span><br/><br/>
+    <span class="parthead"><span id="smpcatid">X</span> Sample Skins</span><br/><br/>
     <div id="smpskincont">loading...</div>
     <br/>
     <a class="button pg" id="pgprev" style="font-size:24px;padding:5px 10px;animation:none;margin-right:20px;">&lt; Prev</a><b>Page <span id="pgid">x/x</span></b><a class="button pg" id="pgnext" style="font-size:24px;padding:5px 10px;animation:none;margin-left:20px;">Next &gt;</a>
     <br/><br/>
     <a class="button cancel" data-cancel="smpskins" style="font-size:24px;padding:5px 10px;animation:none;margin-left:-5px;">Cancel</a><br/><br/>
-    <p style="font-style:italic;font-size:12px">Note: If you want your skin featured here for people to use, feel free to message the skin code to @Finbae#2180 on Discord!</p>
+    <p style="font-style:italic;font-size:12px">Info: If you want your skin featured here for people to use, feel free to message the skin link/code to @Finbae#2180 on Discord!</p>
 </div>
 
 <div id="addskin2">
@@ -81,24 +103,28 @@ styleToUse: 'skinstyle'
     <b>What would you like to name this skin?</b><br/><br/>
     <input type="text" id="skn" maxlength="30" size="30" value="Skin"><br/>
     <a id="svskin" class="button" style="font-size:24px;padding:5px 10px;margin-right:15px">Save Skin!</a><a class="button cancel" data-cancel="addskin2" style="font-size:24px;padding:5px 10px;">Cancel</a><br/><br/>
-    <p style="font-style:italic;font-size:12px">Tip: Once this skin is added, click on it and press 'Apply skin' to use it on bonk.io</p>
+    <p style="font-style:italic;font-size:12px">Tip: Once this skin is added, hover over it and press 'APPLY' on the button that appears to use it on bonk.io</p>
 </div>
 
 <div id="editskin">
     <span class="parthead">Editing skin</span><br/><br/>
     <img class="sknframe sknframebig" id="sknframe3" type="image/svg+xml">
     <img class="sknframe" id="sknframe" type="image/svg+xml"><br/><br/>
-    Skin name: <input type="text" id="skne" maxlength="30" size="30"><br/><br/>
-    <a id="shrskin" class="button" style="font-size:24px;padding:5px 10px;animation:none;">Share Skin</a>
-    <a id="aplskin" class="button" style="font-size:24px;padding:5px 10px;animation:none;">Apply skin on Bonk.io</a>
-    <br/><br/>
-    <a id="edskin" class="button" style="font-size:24px;padding:5px 10px;margin-right:30px;animation:none;">Done</a><a id="delskin" class="button" style="font-size:24px;padding:5px 10px;margin-left:-10px;animation:none;">Delete Skin</a><br/><br/>
-    <p style="font-style:italic;font-size:12px">Tip: You can share your skin code (press 'get skin code' button to do this!) with a friend and<br/>then they will be able to use your skin in the Skin Manager too! :)<br/><br/>ps. credit to its_magic for the skin previews &lt;3!</p>
+    <a id="openblse" class="button" style="font-size:24px;padding:5px 10px;margin-left:-10px;animation:none;">Open in Skin Editor (new)</a><br/><br/><br/>
+    Skin name: <input type="text" id="skne" maxlength="30" size="30"><br/>
+    Skin slot colour: <input type="text" maxlength="7" size="7" id="sslotcol" class="jscolor {value:'fb016e', width:200, height:150, padding:0, borderWidth:0, backgroundColor:'transparent', hash:true}">
+    <a style="font-style:italic;cursor:pointer;text-decoration:underline;font-size:18px;margin-left:10px;" id="resetcol">reset</a><br/>
+    Tags: <input type="text" id="skntags"><br/><br/>
+    <a id="edskin" class="button" style="font-size:28px;padding:5px 10px;animation:none;">Save!</a><br/><br/>
+    <p>
+        <a class="button cancel" data-cancel="editskin" style="font-size:24px;padding:5px 10px;animation:none;">Cancel</a>
+        <a id="delskin" class="button" style="font-size:24px;padding:5px 10px;animation:none;">Delete Skin</a>
+    </p>
 </div>
 
 <div id="shareskin">
     <span class="parthead">Share your skin</span><br/><br/>
-    <i style="font-size:13px;">Note: The following codes are for <b style="text-decoration:underline">sharing</b> meaning whoever you give these codes to will be able to <b style="text-decoration:underline">use your skin</b>.</i>
+    <i style="font-size:13px;">Info: The following codes are for <b style="text-decoration:underline">sharing</b> meaning whoever you give these codes to will be able to <b style="text-decoration:underline">use your skin</b>.</i>
     <br/><br/>
     <a id="sknshrlink" class="button" style="font-size:24px;padding:5px 10px;animation:none;margin-bottom:15px;">Get Skin Sharing link (recommended)</a><br/>
     <b>or</b><br/>
@@ -106,7 +132,7 @@ styleToUse: 'skinstyle'
     <br/><br/><hr/><br/>
     <span class="parthead">Show your skin</span><br/><br/>
     <b>Generated Skin Image:</b><br/>
-    <i style="font-size:13px;">Note: If sharing to Discord or other social media, <b style="text-decoration:underline">use 'Copy image' instead of 'Copy image address'.</b></i>
+    <i style="font-size:13px;">Info: If sharing to Discord or other social media, <b style="text-decoration:underline">use 'Copy image' instead of 'Copy image address'.</b></i>
     <br/><br/>
     <span id="genskni-l">loading...</span>
     <img style="display:none;" id="genskni" onload="$('#genskni-l').hide();$('#genskni').fadeIn();">
@@ -128,7 +154,11 @@ styleToUse: 'skinstyle'
     <span class="parthead" id="insthead">Login</span><br/><br/>
     <input type="text" id="un" maxlength="15" size="30" placeholder="Bonk.io username"><br/>
     <input type="password" id="pw" maxlength="64" size="30" placeholder="Bonk.io password"><br/>
-    <p id="errtxt" style="font-style:italic;font-size:12px">Note: All requests are sent through bonk.io's servers (using a CORS proxy), and accessed client side with AJAX. Basically, <b>WE CANNOT SEE YOUR LOGIN DETAILS!</b></p>
+
+    <input type="checkbox" id="rm" name="rm" class="cb">
+    <label for="rm" class="cblabel">Remember me</label><br/><br/>
+
+    <p id="errtxt" style="font-style:italic;font-size:12px">Info: All requests are sent through bonk.io's servers (using a CORS proxy), and accessed client side with AJAX. Basically, <b>WE CANNOT SEE YOUR LOGIN DETAILS!</b></p>
     <br/>
 </div>
 <a id="button" class="button" data-next="loggedin">Login with Bonk.io</a>
@@ -145,4 +175,5 @@ styleToUse: 'skinstyle'
     <p>If you have ANY ideas, encounter a bug, or want to give feedback, feel free to tell us in <a href="https://discord.gg/RadQ7xx" target="_blank">our Discord server.</a></p>
     <p>Also, we are always looking for any good skin makers to make some skins for the sample skins page (you will be credited!)</p>
 </div>
+<div id="statusbar"></div>
 <div id="overlay"></div>
